# AISUS

./: .editorconfig  .env  .env-example  .env.example  .gitignore  Dockerfile  README.md  chat_history_manager.py  clear_memory.py  config_reader.py  docker-compose.yml  encode_to_base64.py  example_config.ini  log.txt  main.py  message_handler.py  message_wrapper.py  openai_wrapper.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  test_chat_history_manager.py  test_config.ini  test_message_handler.py  utilities.py  voice_processor.py  whisper_tool.py
adapters/: base.py  telegram_bot.py  userbot.py
agent/: llm.py  planner.py  runner.py  search_task.py
app/: admin_ui.py  chat_geometry.py  message_logic.py  podcast_dossier.py  podcast_intent.py
billing/: __init__.py  bootstrap.py  commands.py  context.py  crypto.py  gateway.py  keypool.py  policy.py  pricing.py  pricing_seed.py  runtime.py
commands/: admin.py
config/: instances.yaml
configs/: example_config.ini
core/: env.py  logging_setup.py  model_preferences.py  podcast.py  prompts.py  provider_registry.py  reasoning.py  runtime_user_settings.py  telegram_formatting.py  token_usage.py  tokens.py  user_preferences.py
db/: accounts_repository.py  admin_repository.py  bootstrap.py  chats_repository.py  connection.py  hooks.py  keypool_repository.py  knowledge_repository.py  memory_repository.py  migrate.py  portal_repository.py  repositories.py  search_repository.py  settings_repository.py  topups_repository.py  transactions_repository.py  users_repository.py
deploy/: deploy.cjs  (+6 more)
(+167 files in other folders)
